tests/spec/emit/snapshots/for_loop_variable_does_not_shadow_outer_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let i = 100
    for i in 0..3 {
      let _ = i
    }
    i
  }
---
package main

func test() int {
	i := 100
	for i_1 := range 3 {
		_ = i_1
	}
	return i
}
