tests/spec/emit/snapshots/for_loop_with_wildcard.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(items: Slice<int>) -> int {
    let mut count = 0;
    for _ in items {
      count = count + 1;
    };
    count
  }
---
package main

func test(items []int) int {
	count := 0
	for range items {
		count++
	}
	return count
}
