tests/spec/emit/snapshots/for_pair_pattern_on_go_interface_asserts_value_type.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn sum_areas(items: Map<string, shapes.Shape>) -> int {
    let mut total = 0
    for (_, shapes.Rect { W: w, H: h }) in items {
      total = total + w * h
    }
    total
  }
---
package main

import "example.com/shapes"

func sumAreas(items map[string]shapes.Shape) int {
	total := 0
	for key, value := range items {
		_ = key
		asserted := value.(shapes.Rect)
		w := asserted.W
		h := asserted.H
		total += w * h
	}
	return total
}
