tests/spec/emit/snapshots/format_string_adjacent_string_operands_concatenate.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn join(a: string, b: string) -> string {
    f"{a}{b}"
  }
---
package main

func join(a, b string) string {
	return a + b
}
