tests/spec/emit/snapshots/format_string_concatenation_as_byte_at_receiver_is_parenthesized.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn first(b: string) -> byte {
    f"x{b}".byte_at(0)
  }
---
package main

func first(b string) byte {
	return ("x" + b)[0]
}
