tests/spec/emit/snapshots/format_string_concatenation_as_length_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn size(b: string) -> int {
    f"x{b}".length()
  }
---
package main

func size(b string) int {
	return len("x" + b)
}
