tests/spec/emit/snapshots/format_string_concatenation_is_captured_before_later_argument_setup.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn next(s: string) -> Result<string, error> { fmt.Println(s); Ok(s) }
  fn log(s: string) -> string { fmt.Println(s); s }
  fn show(a: string, b: string) -> string { a + b }
  
  fn run() -> Result<string, error> {
    Ok(show(f"{next("one")?}{log("two")}", next("three")?))
  }
---
package main

import "fmt"

func next(s string) (string, error) {
	fmt.Println(s)
	return s, nil
}

func log(s string) string {
	fmt.Println(s)
	return s
}

func show(a, b string) string {
	return a + b
}

func run() (string, error) {
	ret, err := next("one")
	if err != nil {
		return "", err
	}
	arg := ret + log("two")
	ret_1, err_1 := next("three")
	if err_1 != nil {
		return "", err_1
	}
	return show(arg, ret_1), nil
}
